Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/AST_WHILE01.ru
/? Prueba el while

struct A {
    Int a1;
}
impl A{ 
    .(){} 
    fn m1(Int p1)->void
    {
        Int v1;
        while(p1 > v1){
            (IO.out_int(v1));
            v1 = v1 +1; 
        }
       
    }
    
    fn m2()->void
    {}
         
}
struct B : A{}
impl B { .(){}}

start{}